Majors, Minors, Certs Page : Column Content wrapping https://bugify.idfive.com/issues/27649

--- a/src/components/pages/_additional-pages.scss
+++ b/src/components/pages/_additional-pages.scss
@@ -191,6 +191,7 @@
         }
         > li {
           margin-bottom: rem(28);
+          break-inside: avoid;
           @include media-breakpoint-up(lg) {
             margin-bottom: rem(35);
           }
